--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section id="landing-image" class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2><b>Dive into Music Nostalgia</b></h2>
 							<p class="major">Dive into music nostalgia by preparing a spotify playlist of top 100 billboard songs from any date! Try it out by signing through Spotify below</p>
