--- a/templates/index.html
+++ b/templates/index.html
@@ -4,21 +4,11 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-  <head>
-    <title>Melodies of the past</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="../static/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="../static/css/noscript.css"
-    /></noscript>
 
-    <link rel="shortcut icon" href="../static/images/favicon.ico" />
-  </head>
+<html>
+  <!--  Head -->
+  {% include "head.html" %}
+
   <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
